fix collapse margin

--- a/src/components/collapse/collapse.scss
+++ b/src/components/collapse/collapse.scss
@@ -1,6 +1,7 @@
 .collapse {
     display: block;
     margin: 20px;
+    margin-bottom: 0;
 
     @media screen and (min-width: 768px) {
         margin: 33px 38px 38px;
@@ -19,7 +20,7 @@
         margin-top: 11px;
 
         @media screen and (min-width: 768px) {
-            margin-top: 24px;
+            margin-top: 21px;
         }
     }
 
@@ -31,6 +32,7 @@
         width: 100%;
         background-color: $primary-color;
         border-radius: 5px;
+
 
         @media screen and (min-width: 768px) {
             height: 47px;
@@ -68,6 +70,7 @@
 
         &.rotate {
             rotate: 180deg;
+            padding-left: 6.79px;
         }
     }
 
