--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -4,6 +4,7 @@ ul {
 
 .collapse__about-section {
     margin-top: 4px;
+    margin-bottom: 20px;
 
     @media screen and (min-width: 768px) {
         margin: 0px 62px;
